<resources>
    <string name="app_name">Hilik Salary</string>
    <string name="settings">Settings</string>
    <string name="show_mothly_report">Manage your shifts</string>
    <string name="your_estimated_salary_is">Your Estimated Salary Is</string>
    <string name="example_address">e.g. King George 10</string>
    <string name="no_address_entered_yet">No Address Entered Yet.</string>
    <string name="workplaceLabel">Your Workplace Address</string>
    <string name="salaryPerHourLabel">Salary Per Hour</string>
    <string name="slaryExample">50</string>
    <string name="transportLabel">Transport Expanses Per Day</string>
    <string name="transportExample">22.6</string>
    <string name="extraHoursLabel">Enable Extra Hours</string>
    <string name="startHourLabel">Extra Time Starts From Hour</string>
    <string name="extraTimeExample">8</string>
    <string name="precentageLabel">Extra Time Precentage</string>
    <string name="precentageExample">150</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="currency_prompt">Choose your currency</string>
    <string name="currencyLabel">Choose your currency</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>

    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="add_shift">Add Shift</string>
    <string name="time">Choose Time</string>
    <string name="date">Choose Date</string>
    <string name="exit">Exit</string>
    <string name="entry">Entry</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="no_shifts_were_found">No Shifts Were Found</string>

    <string-array name="currency_array">
        <item>₪</item>
        <item>$</item>
        <item>€</item>
    </string-array>
</resources>
