<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layoutDirection="ltr"
    tools:context="com.example.shonandtomer.hilik.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <Spinner
            android:id="@+id/monthSppiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown" />

        <TextView
            android:text="@string/your_estimated_salary_is"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/estimatedTxt"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:text="0$"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/salaryTxt"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:text="@string/start_service"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/startServiceBtn"
                android:layout_weight="1"/>

            <Button
                android:text="@string/stop_service"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/stopServiceBtn"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settingsBtn"
            android:layout_weight="1" />

        <Button
            android:text="@string/show_mothly_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reportBtn"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
