<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry"
        android:ems="10"
        android:id="@+id/entryTxt"
        android:paddingBottom="5dp"
        android:textSize="20sp"
        android:singleLine="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp">

        <TextView
            android:hint="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entryDateBtn"
            android:layout_weight="1"
            android:textSize="18sp"
            android:paddingRight="5dp"

            style="@android:style/Widget.DeviceDefault.Light.Spinner" />

        <TextView
            android:hint="@string/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entryTimeBtn"
            android:layout_weight="1"
            android:textSize="18sp"

            style="@android:style/Widget.DeviceDefault.Light.Spinner" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:ems="10"
        android:id="@+id/exitTxt"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="20sp"
        android:singleLine="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp">

        <TextView
            android:hint="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exitDateBtn"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:textSize="18sp"

            style="@android:style/Widget.DeviceDefault.Light.Spinner" />

        <TextView
            android:hint="@string/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exitTimeBtn"
            android:layout_weight="1"
            android:textSize="18sp"

            style="@android:style/Widget.DeviceDefault.Light.Spinner" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/addBtn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:layout_marginTop="20dp"
            fancy:fb_borderColor="@color/white"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/greenBtn"
            fancy:fb_focusColor="@color/greenBackBtn"
            fancy:fb_fontIconResource="&#xf067;"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/add_shift"
            fancy:fb_textColor="@color/white" />

    </LinearLayout>

</LinearLayout>